<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Saan Tayo Kakain?</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_button">Test</string>
    <string name="title">Saan tayo kakain?</string>
    <string name="button1">Kahit saan!</string>
    <string name="button2">Tara!</string>
    <string name="nearbyLabel">Gusto ko sa malapit na:</string>
    <string name="button4">Button 4</string>
    <string name="title_activity_generate_map">Location Map</string>
    <string name="range">Distance radius</string>
    <string name="latitude_longitude">%1$.8f,%2$.8f</string>
    <string name="app_id">542669075827696</string>
    <string name="searchName">Restaurant Name</string>
    <string name="share">Share</string>
    <string name="loginTwitter">Twitter Login</string>
    <string name="logoutTwitter">Twitter Logout</string>
    <string name="shareFB">Publish FB</string>
    <string name="shareTw">Tweet</string>
    <string name="malapit">Kahit saan!</string>
    <string name="distanceText">Gaano kalayo mula sayo?</string>
    <string name="restoText">Sa malapit na</string>
    <string name="restoHint">pangalan ng kainan</string>
    <string name="nextStore">Pili ulit!</string>
	<string-array name="distance">
	    <item>1 kilometro</item>
	    <item>5 kilometro</item>
	    <item>10 kilometro</item>
	    <item>20 kilometro</item>
	</string-array>
</resources>
