<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:background="@drawable/bg_tile"
    android:id="@+id/topLayout" >

	<RelativeLayout 
	    android:id="@+id/titleBanner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#800000">
		<ImageView
			android:id="@+id/titleBannerImg"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_vertical"
		    android:contentDescription="@string/title"
		    android:src="@drawable/banner_red" 
		    android:scaleType="fitCenter"
		    android:adjustViewBounds="true"
		    android:focusable="true"
		    android:focusableInTouchMode="true"/>
	</RelativeLayout>
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:layout_below="@+id/titleBanner">
 <!--
 			<TextView
	            android:id="@+id/titleBanner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/title"
				android:textColor="#FFFFFF"
	            android:textSize="40sp"
	            android:gravity="center"
	            android:typeface="monospace" 
	            android:maxLines="2"
	            android:focusable="true"
	            android:focusableInTouchMode="true"
	            android:layout_marginTop="10dp"/>
 -->
 			<Button
	            android:id="@+id/nearbyButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:text="@string/button1"
	            android:textColor="#FFFFFF"
	            android:textSize="20sp"
	            android:typeface="monospace"
				android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:paddingTop="5dp"
	            android:paddingBottom="5dp"
	            android:layout_marginTop="5dp"
	            android:background="@drawable/button_red_small"/>
 			
	        <RelativeLayout 
	    	    android:id="@+id/row02"
	    	    android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:gravity="center_horizontal" 
	            android:layout_below="@+id/nearbyButton">
			<TextView
	            android:id="@+id/nearbySpecific"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/restoName"
	            android:text="@string/nearbyLabel"
	            android:textColor="#000000"
	            android:textSize="15sp"
	            android:typeface="monospace" 
				android:layout_marginTop="10dp"/>
	       	<EditText 
	            android:id="@+id/restoName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/nearbySpecific"
	            android:hint="@string/restoHint"
	            android:textColor="#000000"
	            android:textSize="15sp"
	            android:typeface="monospace"/>
	            
			<Button
	            android:id="@+id/nearbyButton2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/restoName"
	            android:layout_below="@+id/nearbySpecific"
	            android:layout_alignBottom="@+id/restoName"
	            android:text="@string/button2"
	            android:textColor="#FFFFFF"
				android:textSize="20sp"
	            android:typeface="monospace"
	            android:background="@drawable/button_red_small"/> 
	        
<!-- 	        
	        <ImageButton
	            android:id="@+id/nearbyButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/logo_lowres"
				android:contentDescription="@string/button1"
				android:scaleType="fitCenter"
	            android:adjustViewBounds="true"
	            android:maxWidth="100dp"
	            android:maxHeight="100dp"/> 

	        <TextView
	            android:id="@+id/malapit"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="25dp"
	            android:text="@string/malapit"
	            android:textColor="#FFFFFF"
	            android:textSize="25sp"
	            android:typeface="monospace" 
	            android:maxLines="2"/>
-->	            
	            
	        </RelativeLayout>
 
	    	<LinearLayout 
	    	    android:id="@+id/row03"
	    	    android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_below="@+id/row02" 
    			android:orientation="vertical"
    			android:gravity="center_horizontal"
    			android:layout_marginTop="10dp">
	        <TextView
	            android:id="@+id/distanceText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/distanceText"
	            android:textColor="#000000"
	            android:textSize="15sp"
	            android:typeface="monospace" />
	        <Spinner 
	            android:id="@+id/distanceSpinner"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>

	        </LinearLayout>
	        <LinearLayout 
	    	    android:id="@+id/row04"
	    	    android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_below="@+id/row03" 
    			android:orientation="vertical"
    			android:gravity="center_horizontal">
	    	<com.facebook.widget.LoginButton
			    android:id="@+id/loginFB"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"/>
	    	
	    	<ImageButton
			    android:id="@+id/loginTwitter"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:contentDescription="twitterLogin"
			    android:scaleType="centerCrop"
	            android:adjustViewBounds="true"
			    android:maxWidth="100dp"
			    android:maxHeight="40dp"
			    android:background="@null"
			    android:src="@drawable/twitter_login_lowres" />
	    	</LinearLayout>
			<com.google.android.gms.ads.AdView android:id="@+id/adView"
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            ads:adUnitId="ca-app-pub-5603625544367080/9641567252"
            ads:adSize="BANNER"/>
	</RelativeLayout>
</RelativeLayout>